fixed splash box overlapping nav

--- a/react-app/src/components/SplashPage/index.css
+++ b/react-app/src/components/SplashPage/index.css
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: center;
   width: 700px;
-  height: 100%;
+  height: 400px;
 }
 
 .splash-text {
